Refactor code to use modern Java features
Updated code to use Java records for DTOs and replaced collect(Collectors.toList()) with toList() for cleaner and more efficient list conversion. Simplified switch statements with the new switch expression syntax.