@@ -24,7 +24,7 @@ public class CargoStatusDtoAssembler {
     trackingEvents =
         handlingEvents.stream()
             .map(handlingEvent -> assembler.toDto(cargo, handlingEvent))
-            .collect(Collectors.toList());
+            .toList();
 
     return new CargoStatus(
         cargo.getTrackingId().getIdString(),
@@ -38,21 +38,14 @@ public class CargoStatusDtoAssembler {
 
   private String getCargoStatusText(Cargo cargo) {
     Delivery delivery = cargo.getDelivery();
-
-    switch (delivery.getTransportStatus()) {
-      case IN_PORT:
-        return "In port " + delivery.getLastKnownLocation().getName();
-      case ONBOARD_CARRIER:
-        return "Onboard voyage " + delivery.getCurrentVoyage().getVoyageNumber().getIdString();
-      case CLAIMED:
-        return "Claimed";
-      case NOT_RECEIVED:
-        return "Not received";
-      case UNKNOWN:
-        return "Unknown";
-      default:
-        return "[Unknown status]"; // Should never happen.
-    }
+    return switch (delivery.getTransportStatus()) {
+      case IN_PORT -> "In port " + delivery.getLastKnownLocation().getName();
+      case ONBOARD_CARRIER -> "Onboard voyage " + delivery.getCurrentVoyage().getVoyageNumber().getIdString();
+      case CLAIMED -> "Claimed";
+      case NOT_RECEIVED -> "Not received";
+      case UNKNOWN -> "Unknown";
+      default -> "[Unknown status]"; // Should never happen.
+    };
   }
 
   private String getEta(Cargo cargo) {
